--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ harness = false
 bootloader = "0.9.8"
 volatile = "0.2.6"
 spin = "0.5.2"
-x86_64 = "0.12.1"
+x86_64 = "0.13.2" # changed version due to recent update in rust to remove some features from the 0.12.1 version
 uart_16550 = "0.2.0"
 
 [dependencies.lazy_static]
